<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="260dp"
    android:layout_centerInParent="true"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/income_menu_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/income_select"
        android:gravity="center"
        android:textColor="@color/text_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/income_menu_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/income_menu_tips"
        android:text="@string/income_menu_start"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/text_gray"
        android:background="@null"
        android:editable="false"
        />

    <EditText
        android:id="@+id/income_menu_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/income_menu_start"
        android:gravity="center"
        android:text="@string/income_menu_end"
        android:textColor="@color/text_gray"
        android:textSize="16sp"
        android:background="@null"
        android:editable="false"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        >


        <TextView
            android:id="@+id/income_menu_ok"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:text="@string/ok"
            android:gravity="center"
            android:background="#0058EB"
            android:textSize="14sp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/income_menu_cancel"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:background="@drawable/selector_gray"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/cancel"
            />



    </RelativeLayout>


</RelativeLayout>

