<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_gray2"
    >

    <include
        android:id="@+id/confirm_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        layout="@layout/actionbar_container"
        />

    <TextView
        android:id="@+id/confirm_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_actionbar"
        android:paddingTop="32dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="32dp"
        android:text="@string/confirm_tips"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:background="@color/white"
        />

    <RelativeLayout
        android:id="@+id/confirm_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/confirm_tips"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/confirm_order_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_order"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/confirm_order"
            android:layout_width="96dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/confirm_order_text"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_blue"
            android:gravity="center"
            android:text="@string/confirm_order_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginRight="24dp"
            />


        <TextView
            android:id="@+id/confirm_insurance_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/confirm_order_text"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_insurance"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/confirm_insurance"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/confirm_insurance_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"
            android:textSize="18sp"
            android:textColor="@color/text_yellow"
            android:gravity="center"
            />

        
        <TextView
            android:id="@+id/confirm_serial_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/confirm_insurance_text"
            android:layout_marginLeft="24dp"
            android:text="@string/confirm_serial"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            />
        
        <TextView
            android:id="@+id/confirm_serial"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/confirm_serial_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"
            android:textSize="18sp"
            android:textColor="@color/text_yellow"
            android:gravity="center"
            />

    </RelativeLayout>


    <TextView
        android:id="@+id/confirm_submit"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/confirm_content_container"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/selector_blue"
        android:text="@string/confirm_submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        />
    
    
    


</RelativeLayout>